# NihongoDojo

./: README.md  pyproject.toml  requirements.txt  setup.py
nihongo_dojo/: __init__.py  code.py  core.py
nihongo_dojo/colab/: __init__.py  log_analyzer.py  logging.py  utils.py  visualization.py
nihongo_dojo/data/: __init__.py  dataset_builder.py  datasets.py  huggingface_dataset_builder.py  large_scale_datasets.py
nihongo_dojo/kanji/: __init__.py  compound_words.py  educational_compound_words.py  joyo_kanji_complete.py  kanji_grade_1.py  kanji_grade_2.py  kanji_grade_3.py  kanji_grade_4.py  kanji_grade_5.py  kanji_grade_6.py  kanji_junior_high_1.py  kanji_junior_high_2.py  kanji_junior_high_3.py  kanji_others.py
nihongo_dojo/reward/: __init__.py  counter_rewards.py  kanji_rewards.py  keigo_rewards.py  particle_fill_rewards.py  rewards.py  word_order_rewards.py
nihongo_dojo/tasks/: __init__.py  advanced_sample_augmentation.py  advanced_tasks.py  complete_kanji_tasks.py  cultural_tasks.py  sample_augmentation.py  tasks.py
notebooks/: training_counter.ipynb  training_fill.ipynb  training_kanji.ipynb  training_keigo.ipynb  training_word.ipynb
result/: kanji_mt_bench_20250720_140731.jsonl  kanji_mt_bench_20250720_140731_analysis.json  kanji_mt_bench_20250720_140731_comparison.json
scripts/: generate_datasets.py  upload_to_huggingface.py
