[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nihongo-dojo"
version = "1.0.0"
description = "A GRPO Dataset Library for Japanese Language Training"
readme = "README.md"
authors = [
    {name = "Nihongo DoJo Team", email = "contact@nihongo-dojo.com"}
]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0",
    "tqdm>=4.60.0",
    "datasets>=2.0.0",
    "huggingface-hub>=0.10.0",
    "pandas>=1.3.0",
    "pyarrow>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "black>=21.0.0",
    "isort>=5.0.0",
    "flake8>=3.8.0",
]

[project.scripts]
nihongo-dojo-generate = "nihongo_dojo.generate_datasets:main"
nihongo-dojo-upload = "nihongo_dojo.upload_to_huggingface:main"

[project.urls]
Homepage = "https://github.com/akabekolabs/nihongo-dojo"
Repository = "https://github.com/akabekolabs/nihongo-dojo"
Issues = "https://github.com/akabekolabs/nihongo-dojo/issues"

[tool.setuptools.packages.find]
include = ["nihongo_dojo*"]
exclude = ["tests*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100